--- a/app/blocks/header/header.css
+++ b/app/blocks/header/header.css
@@ -1,13 +1,17 @@
-.header {
-background-color: purple;
-color: #fff;
-font-size: 50px;
-height: 100px;
-width: 200px;
+.header
+{
+  position: relative;
+  width: 100%;
+  opacity: 1;
+  color: #fff;
+  border-radius: 4px;
+  background-color: gray;
+  font-size: 60px;
 }
-h1,
-h2 {
-width: 100%;
-background-color: #fff;
-font-size: 12px;
+
+.box
+{
+  background-color: lightblue;
+  lost-column: 1/3;
+  height: 100px;
 }
