--- a/app/blocks/header/header.css
+++ b/app/blocks/header/header.css
@@ -11,7 +11,7 @@
 
 .box
 {
-  background-color: lightblue;
+  background-color: skyblue;
   lost-column: 1/3;
-  height: 100px;
+  height: 200px;
 }
