--- a/app/blocks/layout-default/layout-default.jade
+++ b/app/blocks/layout-default/layout-default.jade
@@ -1,6 +1,7 @@
 include ../../../node_modules/bemto.jade/bemto.jade
 include ../page/page
 include ../header/header
+include ../icon/icon
 include ../box/box
 include ../footer/footer
 include ../scripts/scripts
@@ -9,6 +10,7 @@ include ../scripts/scripts
 doctype html
 html(lang='eng')
   include ../head/head
+  include ../icon/icon-sprite
   +page
     +header
     block content
