--- a/app/blocks/header/header.jade
+++ b/app/blocks/header/header.jade
@@ -1,3 +1,10 @@
 mixin header()
   +b.header&attributes(attributes)
-  
+    block
+
+
+include ../logo/logo
+
+mixin header()
+  +b.header&attributes(attributes)
+    +logo
