--- a/app/blocks/layout-default/layout-default.jade
+++ b/app/blocks/layout-default/layout-default.jade
@@ -1,9 +1,12 @@
-include ../../../node_modules/bemto.jade/bemto.jade
+include ../../../node_modules/bemto.jade/bemto
 include ../page/page
 include ../header/header
 include ../box/box
 include ../footer/footer
 include ../scripts/scripts
+
+- bemto_settings_element = '__'
+- bemto_settings_modifier = '--'
 
 
 doctype html
