--- a/app/blocks/header/header.jade
+++ b/app/blocks/header/header.jade
@@ -4,6 +4,6 @@ include ../menu/menu
 mixin header()
   +b.header&attributes(attributes)
     +e.logo
-      +logo
+      +logo()
     +e.menu
-      +menu()
+      +menu(getData('menu'))
