--- a/app/blocks/menu/menu.jade
+++ b/app/blocks/menu/menu.jade
@@ -1,5 +1,6 @@
-mixin menu()
-  +b.('nav').menu&attributes(attributes)
+mixin menu(menu)
+  +b('nav').menu&attributes(attributes)
     each item in menu
-      +e('a').item
-        
+      +e('a')(href='##{item[0].toLowerCase()}').item= item[0]
+        //- +icon('{item[1]}').menu__icon
+        +icon('').menu__icon&attributes(attributes)
