--- a/app/blocks/menu/menu.css
+++ b/app/blocks/menu/menu.css
@@ -1,21 +1,24 @@
 .menu
 {
+  display: flex;
   width: 270px;
   background-color: tomato;
 }
 
 .menu__item
 {
+  lost-column: 1/4 0 0;
+
+  justify-content: center;
+  align-items: center;
   outline: 1px solid blue;
   background-color: forestgreen;
-
-  lost-column: 1/4 0 0;
 }
 
 .menu__icon
 {
   width: 25px;
   outline: 1px solid black;
-
+  background-color: azure;
   fill: var(--mainBlack);
 }
