--- a/app/blocks/menu/menu.jade
+++ b/app/blocks/menu/menu.jade
@@ -4,4 +4,5 @@ mixin menu(menu)
   +b('nav').menu&attributes(attributes)
     each item in menu
       +e('a')(href='##{item[0].toLowerCase()}').item
-        +icon(item[1]).menu__icon
+        //- +icon(item[1]).menu__icon
+        +icon('yyy').menu__icon
