--- a/app/blocks/icon/icon.jade
+++ b/app/blocks/icon/icon.jade
@@ -1,4 +1,6 @@
 mixin icon(iconName)
-  +b('svg')&attributes(attributes)
+  +b('svg')(viewBox="0 0 1612.2222 1283" preserveAspectRatio="xMidYMid meet")&attributes(attributes)
     use(xlink:href='##{iconName}')
 //- viewBox="0 0 25.000004 19.8949"
+//- +b('svg')(viewBox="0 0 1612.2222 1283" preserveAspectRatio="xMidYMid meet")&attributes(attributes)
+//- +b('svg')&attributes(attributes)
