--- a/app/blocks/head/head.jade
+++ b/app/blocks/head/head.jade
@@ -42,5 +42,6 @@ head
   meta(name='keywords' content=pageKeywords || '')
 
   //- link(href='/assets/styles/styles.min.css?t=' + timestamp rel='stylesheet')
+  link(href='https://fonts.googleapis.com/css?family=Roboto:400,500|Roboto+Condensed:300,300italic', rel='stylesheet', type='text/css')
   link(href='assets/styles/styles.css' rel='stylesheet')
   
