--- a/app/pages/about.jade
+++ b/app/pages/about.jade
@@ -3,7 +3,7 @@ include ../blocks/index/index
 extends ../blocks/layout-default/layout-default
 
 block head
-	- var pageTitle = 'Project Project about.jade from page';
+  - var pageTitle = 'Portfolio FCC';
 
 block content
-	| about you
+  +index()
