--- a/app/blocks/index/index.jade
+++ b/app/blocks/index/index.jade
@@ -1,2 +1,9 @@
+include ../container/container
+include ../section/section
+
 mixin index()
   +b.index
+    +container()
+      +section()
+        p.r section home roboto medium
+        p.rc section home roboto condensec light
