--- a/app/blocks/menu/menu.jade
+++ b/app/blocks/menu/menu.jade
@@ -1,8 +1,9 @@
 include ../icon/icon
 
+
 mixin menu(menu)
   +b('nav').menu&attributes(attributes)
     each item in menu
       +e('a')(href='##{item[0].toLowerCase()}').item
-        //- +icon(item[1]).menu__icon
-        +icon('yyy').menu__icon
+        +icon(item[1]).menu__icon
+        //- +icon("menu-home").menu__icon
