--- a/app/blocks/header/header.css
+++ b/app/blocks/header/header.css
@@ -1,19 +1,16 @@
 .header
 {
+  display: flex;
   width: 100%;
-  height: 50px;
-  background-color: skyblue;
+  height: 3.125rem;
 }
 
 .header__logo
 {
-  lost-column: 1/3;
+  flex-grow: 0;
 }
 
 .header__menu
 {
-  color: rgba(#000, .8);
-  background-color: lime;
-
-  lost-column: 1/3;
+  flex-grow: 1;
 }
