--- a/app/blocks/menu/menu.jade
+++ b/app/blocks/menu/menu.jade
@@ -1,9 +1,7 @@
 include ../icon/icon
 
-
 mixin menu(menu)
   +b('nav').menu&attributes(attributes)
     each item in menu
       +e('a')(href='##{item[0].toLowerCase()}').item
-        +icon(item[1]).menu__icon
-        //- +icon("menu-home").menu__icon
+        +icon(item[1], item[2], item[3]).menu__icon
