--- a/app/blocks/menu/menu.css
+++ b/app/blocks/menu/menu.css
@@ -16,65 +16,16 @@
 .menu__icon
 {
   width: 1.563em;
+  transition: transform .2s ease-in;
   fill: var(--mainBlack);
 }
 
-.menu__item:hover .menu__icon
+.menu__icon:hover
 {
-  /*fill: red;*/
-  animation-name: bounceIn;
-  animation-duration: 2s;
-  /*animation-delay: .2s;*/
-  /*animation-iteration-count: infinite;*/
+  transform: scale(1.1);
 }
 
-@keyframes bounceIn
+.menu__icon:active
 {
-  from,
-  20%,
-  40%,
-  60%,
-  80%,
-  to
-  {
-    animation-timing-function: cubic-bezier(.215, .610, .355, 1.000);
-  }
-
-  0%
-  {
-    transform: scale3d(.3, .3, .3);
-    opacity: 0;
-  }
-
-  20%
-  {
-    transform: scale3d(1.1, 1.1, 1.1);
-  }
-
-  40%
-  {
-    transform: scale3d(.9, .9, .9);
-  }
-
-  60%
-  {
-    transform: scale3d(1.03, 1.03, 1.03);
-    opacity: 1;
-  }
-
-  80%
-  {
-    transform: scale3d(.97, .97, .97);
-  }
-
-  to
-  {
-    transform: scale3d(1, 1, 1);
-    opacity: 1;
-  }
-}
-
-.bounceIn
-{
-  animation-name: bounceIn;
+  transform: scale(.8);
 }
