--- a/app/blocks/section/section.css
+++ b/app/blocks/section/section.css
@@ -1,15 +1,4 @@
-.r
+.section
 {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 500;
-  font-style: normal;
-  font-size: 25px;
-}
-
-.rc
-{
-  font-family: 'Roboto Condensed', sans-serif;
-  font-weight: 300;
-  font-style: italic;
-  font-size: 67px;
+  /*width: 100%;*/
 }
