--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -9,5 +9,10 @@
 
 body
 {
+  color: var(--mainBlack);
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
+  line-height: 1.45;
 }
+
+/* 23,2 */
