--- a/app/blocks/header/header.jade
+++ b/app/blocks/header/header.jade
@@ -1,11 +1,11 @@
 include ../container/container
-include ../logo/logo
 include ../menu/menu
 
 mixin header()
   +container()
     +b.header&attributes(attributes)
       +e.logo
-        +logo()
+        +icon('logo_small', 1, 1).logo.logo-s
+        +icon('logo', 400, 200).logo.logo-l
       +e.menu
         +menu(getData('menu'))
