--- a/app/blocks/header/header.css
+++ b/app/blocks/header/header.css
@@ -1,6 +1,7 @@
 .header
 {
   display: flex;
+  justify-content: space-between;
   width: 100%;
   height: 3.125rem;
 }
@@ -12,5 +13,22 @@
 
 .header__menu
 {
+  justify-content: flex-end;
   flex-grow: 1;
+}
+
+@media (--m)
+{
+  .header
+  {
+    height: 4.375rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+
+  .header__menu
+  {
+    flex-grow: 0;
+    flex-basis: 28.125rem;
+  }
 }
