--- a/app/blocks/logo/logo.css
+++ b/app/blocks/logo/logo.css
@@ -1,7 +1,24 @@
 .logo
 {
-  width: 50px;
-  height: 50px;
-
+  width: 3.125rem;
   fill: var(--mainBlack);
+}
+
+.logo-l
+{
+  display: none;
+}
+
+@media (--m)
+{
+  .logo-s
+  {
+    display: none;
+  }
+
+  .logo-l
+  {
+    display: block;
+    width: 8.75rem;
+  }
 }
