--- a/app/blocks/home/home.css
+++ b/app/blocks/home/home.css
@@ -5,11 +5,14 @@
   padding-bottom: 5%;
   padding-left: 6.25%;
   background-image: linear-gradient(to left, #4b1248, #f0c27b);
+  position: relative;
+  /*height: 20rem*/
 }
 
 .home__heading
 {
   lost-column: 1/2 0 0;
+
   flex-direction: column;
 }
 
