--- a/app/blocks/about/about.css
+++ b/app/blocks/about/about.css
@@ -9,20 +9,9 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 100%;
-  height: 73px;
-  background-image: linear-gradient(to right top, white 50%, red 50%, red);
-}
-
-
-/*.triangle
-{
-  position: absolute;
-  bottom: 0;
-  left: 0;
   width: 0;
   height: 0;
-  border-width: 70px 0 0 320px;
+  border-width: 74px 0 0 0;
   border-style: solid;
   border-color: transparent transparent transparent #007bff;
-}*/
+}
