--- a/app/blocks/index/index.jade
+++ b/app/blocks/index/index.jade
@@ -4,6 +4,7 @@ include ../home/home
 include ../about/about
 include ../heading/heading
 include ../subheading/subheading
+include ../triangle/triangle
 
 mixin index()
   +b.index
@@ -16,7 +17,7 @@ mixin index()
               | Design is not just what it looks like and feels like. Design is how it works.
           +e.lion
             +icon('lion', 130, 167.251).lion
-          span(class="triangle triangle--top-left js-triangle")
+        +triangle().triangle--top-left.js-triangle
       +section()#about
         +about()
           p about section-about
