--- a/app/blocks/index/index.jade
+++ b/app/blocks/index/index.jade
@@ -17,7 +17,14 @@ mixin index()
               | Design is not just what it looks like and feels like. Design is how it works.
           +e.lion
             +icon('lion', 130, 167.251).lion
+
         +triangle().triangle--top-left.js-triangle
       +section()#about
         +about()
-          p about section-about
+          +e.avatar
+            +icon('avatar', 400, 385).avatar
+          +e.info
+            h2 Inin
+            h3  Front-end developer
+            p I'm a front-end developer based in Moscow. I produce stylish and high-quality digital projects.
+            p I'm available for freelance works.
