--- a/app/blocks/about/about.css
+++ b/app/blocks/about/about.css
@@ -1,5 +1,25 @@
 .about
 {
-  height: 30rem;
-  background-color: lightgreen;
+  width: 100%;
+}
+
+.about__avatar
+{
+  lost-column: 1.3/3 0 0;
+
+  flex-direction: column;
+  align-items: center;
+}
+
+.about__info
+{
+  lost-column: 1.7/3 0 0;
+
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.avatar
+{
+  width: 71.94244604316546%;
 }
