--- a/app/styles/helpers/typography.css
+++ b/app/styles/helpers/typography.css
@@ -32,21 +32,35 @@ h1
   margin-top: 0;
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 6.854em;
+  font-size: responsive 2rem 6.854rem;
+  font-range: 20rem 90rem;
 }
 
 h2
 {
   font-size: 4.236em;
+  font-size: responsive 1.618rem 4.236em;
+  font-range: 20rem 90rem;
+  font-weight: 500;
 }
 
 h3
 {
   font-size: 2.618em;
+  font-size: responsive 1.2rem 2.618em;
+  font-range: 20rem 90rem;
 }
 
 h4
 {
   font-size: 1.618em;
+}
+
+p
+{
+  font-size: 1.618em;
+  font-size: responsive 1rem 1.618rem;
+  font-range: 20rem 90rem;
 }
 
 small
