--- a/app/blocks/index/index.jade
+++ b/app/blocks/index/index.jade
@@ -25,6 +25,6 @@ mixin index()
             +icon('avatar', 400, 385).avatar
           +e.info
             h2 Inin
-            h3  Front-end developer
+            h3.light  Front-end developer
             p I'm a front-end developer based in Moscow. I produce stylish and high-quality digital projects.
             p I'm available for freelance works.
