--- a/app/blocks/index/index.jade
+++ b/app/blocks/index/index.jade
@@ -5,6 +5,8 @@ include ../about/about
 include ../heading/heading
 include ../subheading/subheading
 include ../triangle/triangle
+include ../info/info
+include ../social/social
 
 mixin index()
   +b.index
@@ -23,8 +25,10 @@ mixin index()
         +about()
           +e.avatar
             +icon('avatar', 400, 385).avatar
+            +social(getData('social'))
           +e.info
-            h2 Inin
-            h3.light  Front-end developer
-            p I'm a front-end developer based in Moscow. I produce stylish and high-quality digital projects.
-            p I'm available for freelance works.
+            +info()
+              h2 Inin
+              h3.light  Front-end developer
+              p I'm a front-end developer based in Moscow. I produce stylish and high-quality digital projects.
+              p I'm available for freelance works.
