--- a/app/blocks/skills/skills.css
+++ b/app/blocks/skills/skills.css
@@ -1,7 +1,38 @@
 .skills
 {
+  flex-direction: column;
   width: 200px;
   height: 300px;
   background-color: darkgray;
+}
+
+.checkbox
+{
+  display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
+  height: 260px;
+  list-style: none;
+}
+
+.checkbox__label
+{
+  display: flex;
+  align-items: flex-end;
+  cursor: pointer;
+  vertical-align: bottom;
+  background-color: #1e90ff;
+  font-size: 21px;
+}
+
+.checkbox__label::before
+{
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  margin-right: 5px;
+  content: '';
+  vertical-align: middle;
+  border-radius: 50%;
+  background-image: url('https://unsplash.it/g/30?image=855');
 }
