--- a/app/blocks/skills/skills.css
+++ b/app/blocks/skills/skills.css
@@ -1,9 +1,9 @@
 .skills
 {
   flex-direction: column;
-  width: 200px;
-  height: 300px;
-  background-color: darkgray;
+  width: 100%;
+  background-color: gray;
+  max-width: 25rem;
 }
 
 .checkbox
@@ -11,28 +11,35 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  height: 260px;
+  padding: 0;
   list-style: none;
+  background-color: tomato;
+  height: 9.375rem;
 }
 
 .checkbox__label
 {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   cursor: pointer;
-  vertical-align: bottom;
-  background-color: #1e90ff;
-  font-size: 21px;
+  background-color: lightgreen;
+  font-size: 1rem;
 }
 
 .checkbox__label::before
 {
   display: inline-block;
-  width: 30px;
-  height: 30px;
+  width: 25px;
+  height: 25px;
   margin-right: 5px;
   content: '';
   vertical-align: middle;
-  border-radius: 50%;
-  background-image: url('https://unsplash.it/g/30?image=855');
+  background-image: svg('check-empty', '[fill]: var(--mainBlack)');
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.checkbox__input[type='checkbox']:checked + .checkbox__label::before
+{
+  background-image: svg('check', '[fill]: var(--mainBlack)');
 }
