--- a/app/blocks/skills/skills.css
+++ b/app/blocks/skills/skills.css
@@ -2,8 +2,8 @@
 {
   flex-direction: column;
   width: 100%;
-  background-color: gray;
   max-width: 25rem;
+  background-color: gray;
 }
 
 .checkbox
@@ -11,27 +11,30 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  height: 9.375rem;
   padding: 0;
   list-style: none;
-  background-color: tomato;
-  height: 9.375rem;
 }
 
 .checkbox__label
 {
   display: flex;
   align-items: center;
+  margin: 0 .3rem;
   cursor: pointer;
   background-color: lightgreen;
-  font-size: 1rem;
+  font-size: responsive 1rem 1.618rem;
+  font-range: 20rem 90rem;
 }
 
 .checkbox__label::before
 {
   display: inline-block;
-  width: 25px;
-  height: 25px;
-  margin-right: 5px;
+  width: 2.25vw;
+  min-width: 1.563rem;
+  height: 2.25vw;
+  min-height: 1.563rem;
+  margin-right: .625rem;
   content: '';
   vertical-align: middle;
   background-image: svg('check-empty', '[fill]: var(--mainBlack)');
@@ -39,7 +42,16 @@
   background-position: center;
 }
 
+
 .checkbox__input[type='checkbox']:checked + .checkbox__label::before
 {
   background-image: svg('check', '[fill]: var(--mainBlack)');
+}
+
+@media (--m)
+{
+  .checkbox
+  {
+    height: 12rem;
+  }
 }
