--- a/app/blocks/index/index.jade
+++ b/app/blocks/index/index.jade
@@ -37,5 +37,5 @@ mixin index()
           +e.skills
             +skills(getData('skills'))
       +section()#portfolio
-        +portfolio()
+        +portfolio(getData('works'))
         
