--- a/app/blocks/portfolio/portfolio.css
+++ b/app/blocks/portfolio/portfolio.css
@@ -1,6 +1,27 @@
 .portfolio
 {
+  flex-wrap: wrap;
   width: 100%;
-  height: 300px;
   background-color: lightgreen;
+}
+
+.portfolio__item
+{
+  lost-column: 1/2 2;
+}
+
+@media (--m)
+{
+  .portfolio__item
+  {
+    lost-column: 1/3 3;
+  }
+}
+
+@media (--xl)
+{
+  .portfolio__item
+  {
+    lost-column: 1/4 4;
+  }
 }
