--- a/app/blocks/portfolio/portfolio.jade
+++ b/app/blocks/portfolio/portfolio.jade
@@ -1,20 +1,52 @@
-mixin portfolio()
+mixin portfolio(list)
   +b.portfolio&attributes(attributes)
-    picture
-      source(
-        media="(min-width: 0) and (max-width: 20rem)",
-        srcset="http://satyr.io/300x300/khaki?text=x1, http://satyr.io/450x450/khaki?text=x1.5 1.5x, http://satyr.io/600x600/khaki?text=x2 2x"
-        )
-      source(
-        media="(min-width: 20rem) and (max-width: 30rem)",
-        srcset="http://satyr.io/400x400/skyblue?text=x1, http://satyr.io/600x600/skyblue?text=x1.5 1.5x, http://satyr.io/800x800/skyblue?text=x2 2x"
-        )
-      source(
-        media="(min-width: 30rem) and (max-width: 40rem)",
-        srcset="http://satyr.io/600x600/pink?text=x1, http://satyr.io/900x900/pink?text=x1.5 1.5x, http://satyr.io/1200x1200/pink?text=x2 2x"
-        )
-      source(
-        media="(min-width: 40rem)",
-        srcset="http://satyr.io/1200x1200/gold?text=x1, http://satyr.io/1800x1800/gold?text=x1.5 1.5x, http://satyr.io/2400x2400/gold?text=x2 2x"
-        )
-      img(srcset="http://satyr.io/300x300/red, http://satyr.io/450x450/red?text=x1.5 1.5x, http://satyr.io/600x600/red?text=x2 2x", alt="portfolio exampe")
+    each item in list
+     +e.item
+        picture
+          source(
+            media="(max-width: 20rem)",
+            srcset="#{item[2]}"
+            )
+          source(
+            media="(min-width: 20rem) and (max-width: 30rem)",
+            srcset="#{item[3]}"
+            )
+          source(
+            media="(min-width: 30rem) and (max-width: 40rem)",
+            srcset="#{item[4]}"
+            )
+          source(
+            media="(min-width: 40rem) and (max-width: 60rem)",
+            srcset="#{item[4]}"
+            )
+          source(
+            media="(min-width: 60rem) and (max-width: 80rem)",
+            srcset="#{item[5]}"
+            )
+          source(
+            media="(min-width: 80rem)",
+            srcset="#{item[5]}"
+            )
+          img(srcset="#{item[2]}", alt="#{item[0]}")
+
+
+      //- 
+      //- 
+      //- picture
+      //-   source(
+      //-     media="(min-width: 0) and (max-width: 20rem)",
+      //-     srcset="http://satyr.io/300x300/khaki?text=x1, http://satyr.io/450x450/khaki?text=x1.5 1.5x, http://satyr.io/600x600/khaki?text=x2 2x"
+      //-     )
+      //-   source(
+      //-     media="(min-width: 20rem) and (max-width: 30rem)",
+      //-     srcset="http://satyr.io/400x400/skyblue?text=x1, http://satyr.io/600x600/skyblue?text=x1.5 1.5x, http://satyr.io/800x800/skyblue?text=x2 2x"
+      //-     )
+      //-   source(
+      //-     media="(min-width: 30rem) and (max-width: 40rem)",
+      //-     srcset="http://satyr.io/600x600/pink?text=x1, http://satyr.io/900x900/pink?text=x1.5 1.5x, http://satyr.io/1200x1200/pink?text=x2 2x"
+      //-     )
+      //-   source(
+      //-     media="(min-width: 40rem)",
+      //-     srcset="http://satyr.io/1200x1200/gold?text=x1, http://satyr.io/1800x1800/gold?text=x1.5 1.5x, http://satyr.io/2400x2400/gold?text=x2 2x"
+      //-     )
+      //-   img(srcset="http://satyr.io/300x300/red, http://satyr.io/450x450/red?text=x1.5 1.5x, http://satyr.io/600x600/red?text=x2 2x", alt="portfolio exampe")
