--- a/app/blocks/portfolio/portfolio.css
+++ b/app/blocks/portfolio/portfolio.css
@@ -8,6 +8,34 @@
 .portfolio__item
 {
   lost-column: 1/2 2;
+
+  position: relative;
+  border: 1px solid #000;
+}
+
+.portfolio__description
+{
+  position: absolute;
+  top: 0;
+  left: 0;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  color: snow;
+  background-color: rgba(#000, .5);
+}
+
+.portfolio__description h3,
+.portfolio__description p
+{
+  text-align: center;
+}
+
+.portfolio__description:hover
+{
+  background-color: red;
 }
 
 @media (--m)
