--- a/app/blocks/portfolio/portfolio.css
+++ b/app/blocks/portfolio/portfolio.css
@@ -10,6 +10,7 @@
   lost-column: 1/2 2;
 
   position: relative;
+  overflow: hidden;
   border: 1px solid #000;
 }
 
@@ -23,7 +24,8 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  color: snow;
+  transition: background-color 1s ease;
+  color: red;
   background-color: rgba(#000, .5);
 }
 
@@ -35,7 +37,32 @@
 
 .portfolio__description:hover
 {
-  background-color: red;
+  background-color: rgba(#000, 0);
+}
+
+.portfolio__description:hover h3
+{
+  animation-name: move-h3;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease;
+}
+
+.portfolio__description:hover p
+{
+  animation-name: move-p;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease;
+}
+
+.portfolio__description:hover ~ .portfolio__image
+{
+  animation-name: scale-img;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease;
+  animation-delay: .2s;
 }
 
 @media (--m)
@@ -51,5 +78,44 @@
   .portfolio__item
   {
     lost-column: 1/4 4;
+  }
+}
+
+@keyframes move-h3
+{
+  0%
+  {
+    transform: translateY(0);
+  }
+
+  100%
+  {
+    transform: translateY(-12rem);
+  }
+}
+
+@keyframes move-p
+{
+  0%
+  {
+    transform: translateY(0);
+  }
+
+  100%
+  {
+    transform: translateY(12rem);
+  }
+}
+
+@keyframes scale-img
+{
+  0%
+  {
+    transform: scale(1);
+  }
+
+  100%
+  {
+    transform: scale(1.1);
   }
 }
