--- a/app/blocks/portfolio/portfolio.css
+++ b/app/blocks/portfolio/portfolio.css
@@ -2,7 +2,6 @@
 {
   flex-wrap: wrap;
   width: 100%;
-  background-color: lightgreen;
 }
 
 .portfolio__item
@@ -11,7 +10,12 @@
 
   position: relative;
   overflow: hidden;
-  border: 1px solid #000;
+  border: 1px solid white;
+}
+
+.portfolio__image
+{
+  transition: all 3s linear;
 }
 
 .portfolio__description
@@ -24,45 +28,26 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  transition: background-color 1s ease;
-  color: red;
-  background-color: rgba(#000, .5);
 }
 
 .portfolio__description h3,
 .portfolio__description p
 {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  transition: all .5s ease;
   text-align: center;
+  color: white;
+  background-color: rgba(23,23,23, .7);
 }
 
-.portfolio__description:hover
+.portfolio__description h3
 {
-  background-color: rgba(#000, 0);
-}
-
-.portfolio__description:hover h3
-{
-  animation-name: move-h3;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
-  animation-timing-function: ease;
-}
-
-.portfolio__description:hover p
-{
-  animation-name: move-p;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
-  animation-timing-function: ease;
-}
-
-.portfolio__description:hover ~ .portfolio__image
-{
-  animation-name: scale-img;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
-  animation-timing-function: ease;
-  animation-delay: .2s;
+  align-items: flex-end;
 }
 
 @media (--m)
@@ -78,44 +63,5 @@
   .portfolio__item
   {
     lost-column: 1/4 4;
-  }
-}
-
-@keyframes move-h3
-{
-  0%
-  {
-    transform: translateY(0);
-  }
-
-  100%
-  {
-    transform: translateY(-12rem);
-  }
-}
-
-@keyframes move-p
-{
-  0%
-  {
-    transform: translateY(0);
-  }
-
-  100%
-  {
-    transform: translateY(12rem);
-  }
-}
-
-@keyframes scale-img
-{
-  0%
-  {
-    transform: scale(1);
-  }
-
-  100%
-  {
-    transform: scale(1.1);
   }
 }
