--- a/app/blocks/form/form.css
+++ b/app/blocks/form/form.css
@@ -1,5 +1,31 @@
 .feedback
 {
   flex-direction: column;
-  background-color: palevioletred;
+}
+
+.feedback__field
+{
+  position: relative;
+  width: 100%;
+  height: 3rem;
+  margin-bottom: 2rem;
+}
+
+.feedback__input
+{
+  width: 100%;
+  outline: 1px solid red;
+}
+
+.feedback__label
+{
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: lightgreen;
+}
+
+.feedback__btn
+{
+  width: 100%;
 }
