--- a/app/blocks/form/form.css
+++ b/app/blocks/form/form.css
@@ -7,13 +7,15 @@
 {
   position: relative;
   width: 100%;
-  height: 3rem;
+  /*height: 3rem;*/
   margin-bottom: 2rem;
 }
 
 .feedback__input
 {
   width: 100%;
+  padding-right: .5rem;
+  padding-left: .5rem;
   outline: 1px solid red;
 }
 
@@ -22,7 +24,14 @@
   position: absolute;
   top: 0;
   left: 0;
+  padding-left: .5rem;
   background-color: lightgreen;
+}
+
+.feedback__label::after
+{
+  content: '*';
+  color: tomato;
 }
 
 .feedback__btn
