--- a/app/blocks/form/form.jade
+++ b/app/blocks/form/form.jade
@@ -11,6 +11,6 @@ mixin form()
           +e('label')(for='inputSubject').label Subject
       +e.field
           +e('textarea')(id='inputMessage', name='message', maxlength='1000', required).input
-          +e('label')(for='inputMessage').label
+          +e('label')(for='inputMessage').label Message
       input(type="hidden", name="_next", value="")
       +e('button')(type="submit").btn Submit
