--- a/app/blocks/form/form.jade
+++ b/app/blocks/form/form.jade
@@ -1,16 +1,13 @@
 mixin form()
   +b('form')(method="POST", action='').feedback
       +e.field
-          +e('input')(id="inputName", type='text', maxlength='100', required).input
-          +e('label')(for='inputName').label Name
-      +e.field
           +e('input')(id="inputEmail", type='email', name='_replyto', maxlength='100', required).input
           +e('label')(for='inputEmail').label Email
       +e.field
           +e('input')(id="inputSubject", type='text', name='_subject', maxlength='100', required).input
           +e('label')(for='inputSubject').label Subject
       +e.field
-          +e('textarea')(id='inputMessage', name='message', maxlength='1000', required).input
+          +e('textarea')(id='inputMessage', name='message', maxlength='1000', required).textarea
           +e('label')(for='inputMessage').label Message
       input(type="hidden", name="_next", value="")
       +e('button')(type="submit").btn Submit
