--- a/app/blocks/index/index.jade
+++ b/app/blocks/index/index.jade
@@ -43,5 +43,5 @@ mixin index()
         +portfolio(getData('works')).gradient
       +section()#contact
         +contact()
-          h2 Get in touch
+          h2.h2-center Get in touch
           +form()
