--- a/app/styles/helpers/typography.css
+++ b/app/styles/helpers/typography.css
@@ -1,6 +1,6 @@
 html
 {
-  font-size: 16px;
+  font-size: var(--baseFontSize);
 }
 
 body
@@ -40,6 +40,11 @@ h2
   font-size: responsive 1.618rem 4.236em;
   font-range: 20rem 90rem;
   font-weight: 500;
+}
+
+.h2-center
+{
+  text-align: center;
 }
 
 h3
