--- a/app/blocks/footer/footer.css
+++ b/app/blocks/footer/footer.css
@@ -1,6 +1,26 @@
 .footer
 {
-  height: 20rem;
-  color: azure;
-  background-color: dodgerblue;
+  height: calc(var(--vr) * 2);
+  color: #fff;
+  background-color: var(--mainBlack);
+  align-items: center;
+  padding: 0 calc(var(--vr) / 2);
+}
+
+.footer__copyright
+{
+  lost-column: 1/2 0 0;
+}
+
+.footer__author
+{
+  lost-column: 1/2 0 0;
+  justify-content: flex-end;
+}
+
+.loco {
+  display: inline-block;
+  vertical-align: middle;
+  padding: 0 .12rem;
+  height: .618rem;
 }
