--- a/app/blocks/portfolio/portfolio.css
+++ b/app/blocks/portfolio/portfolio.css
@@ -3,7 +3,7 @@
   flex-wrap: wrap;
   width: 100%;
   padding-top: 23%;
-  padding-bottom: 20%;
+  padding-bottom: 10%;
 }
 
 .portfolio__item
@@ -12,7 +12,7 @@
 
   position: relative;
   overflow: hidden;
-  border: 1px solid white;
+  border: 1px solid var(--gold);
 }
 
 .portfolio__image
@@ -43,14 +43,19 @@
   padding: 0;
   transition: all .5s ease;
   text-align: center;
-  color: white;
-  /*background-color: rgba(23, 23, 23, .7);*/
-  background-color: rgba(#4B1248, .7);
+  color: var(--gold);
+  background-color: rgba(23, 23, 23, .7);
 }
 
 .portfolio__description h3
 {
   align-items: flex-end;
+  padding-bottom: .3em;
+}
+
+.portfolio__description p
+{
+  padding-top: .3em;
 }
 
 @media (--m)
