--- a/app/blocks/social/social.jade
+++ b/app/blocks/social/social.jade
@@ -3,5 +3,5 @@ include ../icon/icon
 mixin social(links)
   +b.social&attributes(attributes)
     each item in links
-      +e('a')(href='#0').item
-          +icon(item[1], item[2], item[3]).social__icon
+      +e('a')(href='#{item.link}').item
+          +icon(item.icon, item.w, item.h).social__icon
