--- a/app/blocks/social/social.jade
+++ b/app/blocks/social/social.jade
@@ -3,5 +3,5 @@ include ../icon/icon
 mixin social(links)
   +b.social&attributes(attributes)
     each item in links
-      +e('a')(href='#{item.link}').item
+      +e('a')(href='#{item.link}').item.btn-hvr
           +icon(item.icon, item.w, item.h).social__icon
