--- a/app/blocks/menu/menu.css
+++ b/app/blocks/menu/menu.css
@@ -48,7 +48,6 @@
   {
     align-items: center;
     padding-bottom: 0;
-    font-size: 25px;
     font-size: responsive 1rem 1.618rem;
     font-range: 30rem 90rem;
     font-weight: 500;
@@ -59,5 +58,37 @@
     overflow: hidden;
     white-space: nowrap;
     text-indent: 0;
+  }
+
+  .hvr-under
+  {
+    position: relative;
+    overflow: hidden;
+    transform: translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+
+    backface-visibility: hidden;
+    -moz-osx-font-smoothing: grayscale;
+  }
+
+  .hvr-under::before
+  {
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    right: 0;
+    left: 0;
+    height: .25rem;
+    content: '';
+    transition: transform .3s ease-out;
+    transform: translateY(-.25rem);
+    background: var(--mainBlack);
+  }
+
+  .hvr-under:hover::before,
+  .hvr-under:focus::before,
+  .hvr-under:active::before
+  {
+    transform: translateY(0) scaleX(.8);
   }
 }
