--- a/app/blocks/layout-default/layout-default.jade
+++ b/app/blocks/layout-default/layout-default.jade
@@ -17,4 +17,4 @@ html(lang='eng')
     block content
     +footer
 
-    +scripts(['app.min.js'])
+    +scripts(['app.min.js', 'feedback.js', 'analytics.js'])
