--- a/app/blocks/footer/footer.jade
+++ b/app/blocks/footer/footer.jade
@@ -5,6 +5,7 @@ mixin footer()
     +b.footer&attributes(attributes)
       +e.copyright
         small Copyright &copy;
+        p.test
       +e.author 
         small powered by Puer
           +icon('loco', 45, 41).loco
