--- a/app/pages/index.jade
+++ b/app/pages/index.jade
@@ -3,7 +3,7 @@ include ../blocks/index/index
 extends ../blocks/layout-default/layout-default
 
 block head
-	- var pageTitle = 'Project Project index.jade from page';
+	- var pageTitle = 'Inin';
 
 block content
 	+index()
