--- a/app/blocks/footer/footer.css
+++ b/app/blocks/footer/footer.css
@@ -1,4 +1,9 @@
-.footer
+
+.test
+{
+  width: 3rem;
+  height: 3rem;
+}.footer
 {
   align-items: center;
   height: calc(var(--vr) * 2);
@@ -25,14 +30,4 @@
   height: .618rem;
   padding: 0 .12rem;
   vertical-align: middle;
-}
-
-.test
-{
-  width: 3rem;
-  height: 3rem;
-  color: red;
-  border: 1px solid #fff;
-  background-image: url(../../images/sprite.svg#camera);
-  fill: red;
 }
